<resources>
    <string name="app_name">Covid-Vaccine</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="registration_form">Registration Form</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>