<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/FormTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_form"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@id/guideTop"
            app:layout_constraintStart_toStartOf="@id/guideLeft"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/FormTv"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintEnd_toEndOf="@id/guideRight">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uAdharNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/aadhar_number"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/uName"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintEnd_toEndOf="@id/guideRight">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uAdharNumberEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uMobileNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/uAdharNumber"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintEnd_toEndOf="@id/guideRight">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uMobileNumberEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/uMobileNumber"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintEnd_toEndOf="@id/guideRight">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uAddressEt"
                android:minLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/uAddress"
            app:layout_constraintEnd_toEndOf="@id/uAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>